2005-03-01  Danilo Šegan  <dsegan@gmx.net>

	* rni18n.xml: Update language lists with 50 best supported
	languages as of now (those that don't make it will be removed).

2005-03-02  Davyd Madeley  <davyd@madeley.id.au>

	* figures/figure-applet-modem.png: Another figure. Probably about
	  halfway through uploading them. In this one, the menu has a 3px
	  dropshadow offset (since it's a menu). Please, feel free to email me
	  if you want tips on how to reproduce these screenshots in you l10n.
	
	* rnapplets.xml: Add figure.

2005-03-01  Davyd Madeley  <davyd@madeley.id.au>

	* figures/*: remove old figures
	
	* figures/figure-backgrounds.png:
	* figures/figure-nautilus.png:
	* figures/figure-epiphany.png:
	* figures/figure-soundjuicer.png:
	* figures/figure-evolution-weather.png:
	* figures/figure-totem.png: Some figures. 5px dropshadow offset.
	
	* rnapplications.xml:
	* rndesktop.xml: Update for figures.

>>>>>>> 1.25
2005-03-01  Murray Cumming  <murrayc@murrayc.com>

	* rndesktop.xml: Removed the TODOs, fixed stuff, after email from 
	Alexander Larsson.
	* releasenotes.xml: Added link to RoadMap, because Luis will have 
	this finished for 2.10.
	* rnstandards.xml: Mentioned menus and desktop entries specs.

2005-03-01  Murray Cumming  <murrayc@murrayc.com>

	* rnapplets.xml: Removed the TODO about the sound volume. Apparently 
	it is correct.
	* rnepiphany.xml: Removed the TODO about the improved fullscreen 
	mode. Still have no idea how it is improved, but I will let this one 
	go.

2005-02-28  Murray Cumming  <murrayc@murrayc.com>

	* releasenotes.xml: Revive the known issues section and start it with 
	the mozilla focus problem.

2005-02-28  Murray Cumming  <murrayc@murrayc.com>

	* rnutilities: Remove gnome-search section because the mentioned 
	feature does not exist - it is just a bug fix that, if explained, 
	would just highlight that file searching is not that great in GNOME.

2005-02-28  Murray Cumming  <murrayc@murrayc.com>
